--- a/PracticalExamples/01.navigation-menu/index.html
+++ b/PracticalExamples/01.navigation-menu/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
+		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<script src="../bower_components/angular/angular.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body ng-app>
